# ComfyUI-HyperLoRA

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/: HyperLoRA-T2I-ConceptSlider.json  HyperLoRA-T2I-ControlNet.json  HyperLoRA-T2I-FaceDetailer.json  HyperLoRA-T2I-InstantID.json  HyperLoRA-T2I.json
hyperlora/: common.py  configs.py  modules.py  node_fields.py  nodes.py
