[project]
name = "hyperlora"
description = "Official implementation in ComfyUI of CVPR 2025 paper 'HyperLoRA: Parameter-Efficient Adaptive Generation for Portrait Synthesis'"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.26.3", "insightface>=0.7.3", "onnxruntime>=1.17.1", "opencv-python>=4.9.0.80", "transformers>=4.38.1"]

[project.urls]
Repository = "https://github.com/bytedance/ComfyUI-HyperLoRA"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HyperLoRA"
Icon = ""
